start of CSS added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sign Up</title>
 </head>
-<body>
+<body class="container">
+    <div class="banner">
+    <img class="sidePicture" src="imgs/sidepic.jpg" alt="Side banner"/>
+    </div>
+    <div class="content">
     <p>Id nec amet omnesque apeirian, oblique mandamus no vim. Eruditi persequeris 
        est an, ei clita feugiat accommodare sit. Duo ad falli consequat, vix amet 
        cibo ex. Te sit eius solum salutatus</p>
@@ -34,5 +39,6 @@
         <button type="submit">Create Account</button>
     </form>
     <p>Already have an account? <a href="example.com">Log in</a></p>
+    </div>
 </body>
 </html>
